z-index fix for mobile

--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -717,7 +717,7 @@
     position: relative;
     bottom: 17em;
     left: 50%;
-    z-index: -1;
+    z-index: 1;
     transform: translateX(-50%);
     overflow: visible;
   }
